--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ethers": "^5.6.4",
     "ipfs": "^0.63.5",
     "ipfs-http-client": "^57.0.3",
+    "lucide-react": "^0.546.0",
     "magic-sdk": "^9.0.0",
     "moralis": "^2.22.4",
     "moralis-v1": "^1.11.0",
